# python_orms

./: Makefile  README.md
tortoise_orm/: README.md  docker-compose.test.yml  pyproject.toml  test.Dockerfile
tortoise_orm/app/: app.py  config.py
tortoise_orm/app/common/test/: fixtures.py
tortoise_orm/app/tests/: test_users.py
tortoise_orm/tortoise_orm/: app.py  models.py
tortoise_orm/tortoise_orm/common/test/: fixtures.py
tortoise_orm/tortoise_orm/tests/: test_users.py
